# blinded-hermes

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  flake.nix  fly.production.toml  fly.toml  justfile
.github/workflows/: format.yml  test.yml
migrations/2024-02-20-210617_user_info/: down.sql  up.sql
migrations/2024-04-11-210151_disable_zaps/: down.sql  up.sql
migrations/2024-05-02-213721_add_lnurlp_comments/: down.sql  up.sql
src/: db.rs  invoice.rs  lnurlp.rs  main.rs  mint.rs  nostr.rs  register.rs  routes.rs
src/models/: app_user.rs  invoice.rs  mod.rs  schema.rs  zaps.rs
