[package]
name = "blinded-hermes"
version = "0.1.0"
edition = "2021"
authors = ["Tony Giorgio <tony@mutinywallet.com>", "benthecarman <ben@mutinywallet.com>"]
description = " Blinded Hermes"

[features]
integration-tests = []

[dependencies]
anyhow = "1.0"
axum = { version = "0.6.16", features = ["headers"] }
base64 = "0.13.1"
chrono = { version = "0.4.26", features = ["serde"] }
diesel = { version = "2.1", features = ["postgres", "postgres_backend", "r2d2", "chrono", "numeric"] }
dotenv = "0.15.0"
async-trait = "0.1.77"
fedimint-tbs = "0.3.0"
fedimint-core = "0.3.0"
fedimint-client = "0.3.0"
fedimint-wallet-client = "0.3.0"
fedimint-mint-client = "0.3.0"
fedimint-ln-client = "0.3.0"
fedimint-ln-common = "0.3.0"
futures = "0.3.28"
url = "2.5.0"
itertools = "0.12.0"
hex = "0.4.3"
jwt-compact = { version = "0.8.0", features = ["es256k"] }
nostr = "0.29.1"
nostr-sdk = "0.29.0"
log = "0.4.20"
pretty_env_logger = "0.5"
secp256k1 = { version = "0.28.2", default-features = false, features = ["hashes", "alloc"] }
sha2 = { version = "0.10", default-features = false }
serde = { version = "^1.0", features = ["derive"] }
serde_json = "1.0.67"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.12.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
lazy-regex = "3.1.0"
multimint = { git = "https://github.com/fedimint/fedimint-clientd", rev = "b3078124dd65e6b96fe824da2a0c772a6b4bd9cd" }
names = "0.14.0"

[dev-dependencies]
mockall = "0.11.2"
mockito = "1.2.0"
